<resources>
    <string name="app_name">Yummy Food</string>
    <string name="password_src">Parola</string>
    <string name="email_src">Email Adresi</string>
    <string name="login_src">Giriş yap</string>
    <string name="signup_src">Kayıt Ol</string>
    <string name="name_src">Adınız</string>
    <string name="surname_src">Soyadınız</string>
    <string name="phone_number_src">Telefon numarası</string>
    <string name="address_src">Adres</string>
    <string name="province_src">Şehir</string>
    <string name="county_src">İlçe</string>
    <string name="psignup_src">Kayıt Olun</string>
    <string name="has_account_negative_src">Hesabınız yok mu?&#160;</string>
    <string name="has_account_positive_src">Hesabınız var mı?&#160;</string>
    <string name="signin_button_text">Giriş Yap</string>
    <string name="signup_button_text">Kayıt Ol</string>
    <string name="onboarding_one_header">Onlarca Restoran Seçeneği</string>
    <string name="onboarding_one_text">Onlarca restoranın geniş menenüsünden istediğiniz yemeği kolayca bulabilir, restoranların puanlarını görebilirsiniz.</string>
    <string name="onboarding_two_header">Hızlı Teslimat</string>
    <string name="onboarding_two_text">Siparişinizi verdikten kısa bir süre sonra yemeğiniz sıcacık bir şekilde kapınızda</string>
    <string name="onboarding_three_header">Restoranı Puanlayın</string>
    <string name="onboarding_three_text">Restoranı ve siparişinizi puanlayabilir, diğer kullanıcıların bu puanlardan faydalanmasını sağlayabilirsiniz.</string>
    <string name="default_val">1</string>
    <string name="welcome_text_src">Hoş geldiniz</string>
    <string name="sample_name">Ali Demoglu</string>
    <string name="search_restaurant_src">Restoran Ara</string>
    <string name="comma_src">,&#160;</string>
    <string name="previous_orders_src">Önceki Siparişlerim</string>
    <string name="tl_src">&#160;TL</string>
    <string name="settings_text">Ayarlar</string>
    <string name="back_button_text">Geri</string>
    <string name="save_button_text">Kaydet</string>
    <string name="restaurants_text_src">Restoranlar</string>
    <string name="back_restaurant_button_text">Geri</string>
    <string name="address_label">Adres</string>
    <string name="min_delivery_price_label">Min. Siparis</string>
    <string name="min_delivery_time_label">Teslim Suresi</string>
    <string name="restaurant_menu_title">Restoran Menüsü</string>
    <string name="ingreditens_text">Ekmek, Köfte, Soğan, Kıvırcık, Cheddar peyniri, Patates kızartması, Coca-Cola</string>
    <string name="orders_src">Sipariş ver</string>
</resources>