<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="25dp"
    android:layout_height="match_parent"
    tools:context=".ui.signup_fragment.SignupFragment">



    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="90dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/niramit_medium"
        android:gravity="center"
        android:text="@string/signup_src"
        android:textColor="@color/text_color"
        android:textSize="23sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:expandedHintEnabled="true"
                app:errorTextAppearance="@style/ErrorTextLabel"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:backgroundTint="@color/text_color"
                    android:fontFamily="@font/niramit_regular"
                    android:imeOptions="actionNext"
                    android:hint="@string/name_src"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="15dp"
                android:layout_height="0dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:expandedHintEnabled="true"
                app:errorTextAppearance="@style/ErrorTextLabel"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:backgroundTint="@color/text_color"
                    android:fontFamily="@font/niramit_regular"
                    android:imeOptions="actionNext"
                    android:hint="@string/surname_src"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input_layout"
            app:expandedHintEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding = "10dp"
                android:textSize="14sp"
                android:fontFamily="@font/niramit_regular"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/text_color"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/text_color"
                android:hint="@string/email_src" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_input_layout"
            app:expandedHintEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:drawablePadding = "10dp"
                android:textSize="15sp"
                android:fontFamily="@font/niramit_regular"
                android:inputType="phone"
                android:backgroundTint="@color/text_color"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_phone_call"
                android:drawableTint="@color/text_color"
                android:hint="@string/phone_number_src" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/province_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:expandedHintEnabled="true"
                app:errorTextAppearance="@style/ErrorTextLabel"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:backgroundTint="@color/text_color"
                    android:fontFamily="@font/niramit_regular"
                    android:imeOptions="actionNext"
                    android:hint="@string/province_src"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="15dp"
                android:layout_height="0dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/county_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:expandedHintEnabled="true"
                app:errorTextAppearance="@style/ErrorTextLabel"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:backgroundTint="@color/text_color"
                    android:fontFamily="@font/niramit_regular"
                    android:imeOptions="actionNext"
                    android:hint="@string/county_src"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_input_layout"
            app:expandedHintEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:drawablePadding = "10dp"
                android:textSize="15sp"
                android:fontFamily="@font/niramit_regular"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/text_color"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_location"
                android:drawableTint="@color/text_color"
                android:hint="@string/address_src" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:expandedHintEnabled="true"
            android:id="@+id/password_input_layout"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textSize="15sp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:fontFamily="@font/niramit_regular"
                android:drawableStart="@drawable/ic_unlock"
                android:drawableTint="@color/text_color"
                android:backgroundTint="@color/text_color"
                android:hint="@string/password_src" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/signup_src"
        android:textAllCaps="false"
        android:fontFamily="@font/niramit_regular"
        android:layout_width="130dp"
        android:layout_height="56dp"
        app:layout_constraintVertical_bias="0"
        android:backgroundTint="@color/green_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="10dp"
        android:id="@+id/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/form_layout" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button">

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/niramit_light"
            android:textColor="@color/text_color"
            android:text="@string/has_account_positive_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_button"
            android:textSize="14sp"
            android:fontFamily="@font/niramit_semibold"
            android:textColor="@color/coral_color"
            android:text="@string/login_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:background="@drawable/blurry_background"
        android:gravity="center"
        android:id="@+id/progressLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>