<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraint_layout"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.signin_fragment.SigninFragment">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_bro"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/niramit_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <LinearLayout
        android:paddingHorizontal="28dp"
        android:layout_marginTop="15dp"
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input_layout"
            app:expandedHintEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding = "10dp"
                android:textSize="14sp"
                android:fontFamily="@font/niramit_regular"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/text_color"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/text_color"
                android:hint="@string/email_src" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:expandedHintEnabled="true"
            android:id="@+id/password_input_layout"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorTextLabel"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:fontFamily="@font/niramit_regular"
                android:drawableStart="@drawable/ic_unlock"
                android:drawableTint="@color/text_color"
                android:backgroundTint="@color/text_color"
                android:hint="@string/password_src" />

        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:text="@string/login_src"
        android:textAllCaps="false"
        android:fontFamily="@font/niramit_regular"
        android:layout_width="130dp"
        android:layout_height="56dp"
        app:layout_constraintVertical_bias="0"
        android:backgroundTint="@color/coral_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="10dp"
        android:id="@+id/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/form_layout" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button">

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/niramit_light"
            android:textColor="@color/text_color"
            android:text="@string/has_account_negative_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/signup_button"
            android:textSize="14sp"
            android:fontFamily="@font/niramit_semibold"
            android:textColor="@color/green_color"
            android:text="@string/psignup_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:background="@drawable/blurry_background"
        android:gravity="center"
        android:id="@+id/progressLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>